--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -23,14 +23,14 @@ $max_font: 24px;
 
     @if $u1==$u2 and $u1==$u3 and $u1==$u4 {
         & {
-            font-size: $min-font-size;
+            font-size: $min-font-size !important;
 
             @media screen and (min-width: $min-vw) {
-                font-size: calc(#{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
+                font-size: calc(#{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)})) !important;
             }
 
             @media screen and (min-width: $max-vw) {
-                font-size: $max-font-size;
+                font-size: $max-font-size !important;
             }
         }
     }
