--- a/client/src/components/LoginForm/LoginForm.scss
+++ b/client/src/components/LoginForm/LoginForm.scss
@@ -1,6 +1,4 @@
-.form {
-    width: 30rem;
-}
+@import "../../styles/variables";
 
 .error-label {
     display: flex;
@@ -8,9 +6,10 @@
     font-size: 0.7rem;
 }
 
-form {
-    width: 300px;
-    overflow-y: scroll;
+.form {
+    display: grid;
+    color: $meeky-black;
+
 }
 
 .form-group {
@@ -18,10 +17,17 @@ form {
     grid-template-columns: 1fr;
     justify-content: start;
     width: 100%;
+    margin-top: 1rem;
+    row-gap: .5rem;
 
-    >div {
-        margin: 0;
+    >input {
+        font-size: .75rem;
+
+        &:focus {
+            outline: none;
+        }
     }
+
 }
 
 .control-label {
@@ -33,9 +39,35 @@ form {
     grid-template-columns: 1fr 1fr;
     align-items: center;
     align-content: center;
+    column-gap: 1rem;
+    margin: .5rem 0;
 
     & div {
         margin: 0;
         margin-bottom: 0 !important;
     }
+}
+
+.radio-wrapper {
+    display: grid;
+    grid-template-columns: min-content min-content;
+    font-size: 0.92rem;
+    align-items: center;
+    column-gap: .5rem;
+
+
+
+    &>input {
+        cursor: pointer;
+    }
+
+
+}
+
+.button-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(1rem, 1fr));
+    column-gap: .5rem;
+    width: 100%;
+    margin-top: 1rem;
 }
