--- a/client/src/components/TextInput/TextInput.scss
+++ b/client/src/components/TextInput/TextInput.scss
@@ -63,7 +63,7 @@
     }
 
     &::-webkit-input-placeholder {
-        color: $primary-color;
+        color: $meeky-black;
         opacity: 0.6;
     }
 
@@ -84,7 +84,7 @@
     display: block;
     font-size: .5rem;
     transform: translateY(-2.5rem);
-    color: $primary-color;
+    color: black;
     opacity: 0.6;
     font-family: Arial, Helvetica, sans-serif;
     line-height: .58rem;
@@ -99,8 +99,7 @@
     right: 0px;
     height: .83rem;
     width: .5rem;
-    border: solid $second-color;
-    ;
+    border: solid $primary-color;
     border-width: 0 2px 2px 0;
     cursor: pointer;
     transform: rotate(45deg);
